--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/jorsebsant/chatbot-ai#readme",
   "dependencies": {
     "apiai": "^4.0.3",
+    "dialogflow": "^2.0.0",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuid": "^8.3.1"
   }
 }
